--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,6 @@ build-master:
     script:
         - ls
         - pwd
-        - export BASE_HERE=${PWD}
         - cd ..
         - export SCRAM_ARCH=${CMSSW_RELEASE_ARCH}
         - scram p CMSSW ${CMSSW_RELEASE}
@@ -34,19 +33,34 @@ build-master:
         - git config user.email "noreply@cern.ch"
         - git config user.name "Noreply"
         - mkdir -p MuonAnalysis/MuonAnalyzer
-        - cp -a ${BASE_HERE} MuonAnalysis/MuonAnalyzer
+        - cp -a $CI_PROJECT_DIR MuonAnalysis/MuonAnalyzer
         - scram b -j 5
         - ls -d $CMSSW_BASE/src/.git  $CMSSW_BASE/tmp
         - rm -rf $CMSSW_BASE/src/.git 
         - rm -rf $CMSSW_BASE/tmp
         - cd ../..
         - tar czvf $CI_PROJECT_DIR/build.tar.gz $CMSSW_VERSION
-        - export
     artifacts:
         when: on_success
         expire_in: 1 days
         paths: 
             - build.tar.gz
 
+test-code:
+    tags: [ cvmfs ] 
+    stage: test-simple
+    script:
+        - tar xzvf build.tar.gz
+        - cd CMSSW_*/src
+        - scram b projectrename
+        - eval $(scram runtime -sh)
+        - export CMS_PATH=/cvmfs/cms-ib.cern.ch/week0
+        - CMSSW_VERSION_SPLIT=($(echo $CMSSW_VERSION | tr _ \ ))
+        - export CMSSW_MAJOR=${CMSSW_VERSION_SPLIT[1]}
+        - export CMSSW_MINOR=${CMSSW_VERSION_SPLIT[2]}
+        - cmsRun MuonAnalysis/MuonAnalyzer/test/run_muonAnalizer_cfg.py
+
+
 stages:
   - build
+  - test-simple
