--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,10 +35,9 @@ build-master:
         - mkdir -p MuonAnalysis/MuonAnalyzer
         - cp -a $CI_PROJECT_DIR/* MuonAnalysis/MuonAnalyzer/
         - scram b -j 5
-        - ls -d $CMSSW_BASE/src/.git  $CMSSW_BASE/tmp $CMSSW_BASE/src/MuonAnalysis/MuonAnalyzer/.git
+        - ls -d $CMSSW_BASE/src/.git  $CMSSW_BASE/tmp
         - rm -rf $CMSSW_BASE/src/.git 
         - rm -rf $CMSSW_BASE/tmp
-        - rm -rf $CMSSW_BASE/src/MuonAnalysis/MuonAnalyzer/.git
         - cd ../..
         - tar czvf $CI_PROJECT_DIR/build.tar.gz $CMSSW_VERSION
     artifacts:
