--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,7 @@ test-code:
         - test -d ~/.ssh || mkdir -p ~/.ssh
         - test -f ~/.ssh/known_hosts || touch ~/.ssh/known_hosts
         - grep -q "^lxplus ssh-rsa"  ~/.ssh/known_hosts || echo "$SSH_SERVER_HOSTKEYS" >> ~/.ssh/known_hosts
+        - echo -e "Host *\n\tGSSAPIDelegateCredentials yes\n\tGSSAPITrustDNS yes\n\n" > ~/.ssh/config
         - echo "${CMS_SERVICE_SECRET}" | kinit -f ${CMS_SERVICE_USER}@CERN.CH
         - scp ${CMS_SERVICE_USER}@lxplus:/eos/cms/store/group/phys_muon/MuonPOGIntegration/rootfiles/UL18/events_MINIAOD_SingleMuon_numEvent100.root .
         - cmsRun MuonAnalysis/MuonAnalyzer/test/run_muonAnalizer_cfg.py inputFiles=file:events_MINIAOD_SingleMuon_numEvent100.root globalTag=106X_dataRun2_v28 maxEvents=-1 isMC=0 isFullAOD=0 outputFile=output.root
