--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,23 @@ build-master:
         paths: 
             - build.tar.gz
 
+build-pr:
+    tags: [ cvmfs,docker ]
+    stage: build
+    only: [ merge_requests ]
+    script:
+        - cd ..
+        - source ci_setup_cmssw.sh
+        - mkdir -p MuonAnalysis/MuonAnalyzer
+        - cp -a $CI_PROJECT_DIR/* MuonAnalysis/MuonAnalyzer/
+        - scram b -j 5
+        - ci_tar_cmssw.sh
+    artifacts:
+        when: on_success
+        expire_in: 1 days
+        paths: 
+            - build.tar.gz
+
 test-code:
     tags: [ cvmfs ] 
     stage: test-simple
