--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,29 +12,10 @@ before_script:
   - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch/cms-muonPOG/muonpog-integration.git ~/muonpog-integration
   - export PATH=${PATH}:~/muonpog-integration/scripts
 
-build-master:
-    tags: [ cvmfs,docker ]
-    stage: build
-    only: [ master ]
-    except: [ pushes ]
-    script:
-        - cd ..
-        - source ci_setup_cmssw.sh
-        - mkdir -p MuonAnalysis/MuonAnalyzer
-        - cp -a $CI_PROJECT_DIR/* MuonAnalysis/MuonAnalyzer/
-        - scram b -j 5
-        - ci_tar_cmssw.sh
-    artifacts:
-        when: on_success
-        expire_in: 1 days
-        paths: 
-            - build.tar.gz
 
-build-pr:
+build-code:
     tags: [ cvmfs,docker ]
     stage: build
-    rules:
-        - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     script:
         - cd ..
         - source ci_setup_cmssw.sh
@@ -51,7 +32,6 @@ build-pr:
 test-code:
     tags: [ cvmfs ] 
     stage: test-simple
-    except: [ pushes ]
     script:
         - source ci_untar_cmssw.sh
         - ci_kinit.sh
